@@ -20,6 +20,7 @@ Date: ????
     - Ensure storage.alt_mode is always populated with booleans
     - Move the surface populator to a handler too
     - Convert storage.structs_on_surface to storage.surfacedata
+    - Update structs that show in chart every tick
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 2024. 11. 13
